--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -7,6 +7,7 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="15dp"
@@ -19,13 +20,6 @@
         android:orientation="vertical"
         >
 
-        <CheckBox
-            android:id="@+id/importance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -35,11 +29,20 @@
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_weight="@integer/material_motion_duration_long_1"
                 android:text="@string/title"
                 android:textSize="@dimen/textTitle"
+                tools:ignore="NestedWeights"
+                />
+
+            <CheckBox
+                android:id="@+id/importance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 />
         </LinearLayout>
 
@@ -64,7 +67,7 @@
         <TextView
             android:id="@+id/body_of_the_note"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/textTitle"
             android:layout_weight="1"
             android:text="@string/text_of_the_note"
             android:textSize="@dimen/textDescription"
